Corrected vertical alignment

--- a/components/forms/_checkboxes/checkbox.scss
+++ b/components/forms/_checkboxes/checkbox.scss
@@ -111,8 +111,9 @@
     display: inline;
     margin-block-start: 0;
     margin-block-end: 0;
-    vertical-align: middle;
+    vertical-align: top;
     &:before {
+      vertical-align: bottom;
       margin-right: 6px;
     }
     p {
